unpackaged/main/default/objects/Certification_Requirement__c/Certification_Requirement__c.object-meta.xml
<CustomObject>
    <label>Certification Requirement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>