unpackaged/main/default/objects/Certification_Requirement__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipName>Certification_Requirement_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>