unpackaged/main/default/objects/Certification_Requirement__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>PreSales Accreditation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>