unpackaged/main/default/objects/Certification_Requirement__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <label>Expires On</label>
    <summarizedField>Certification_Assignment__c.Expires_On__c</summarizedField>
    <summaryForeignKey>Certification_Assignment__c.Certification_Requirement__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>