unpackaged/main/default/objects/Certification_Requirement__c/fields/Number_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_Completed__c</fullName>
    <label>Number Completed</label>
    <summaryFilterItems>
        <field>Certification_Assignment__c.Completion_Date__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Certification_Assignment__c.Certification_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>