unpackaged/main/default/objects/Certification_Requirement__c/fields/Number_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_Required__c</fullName>
    <label>Number Required</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>